[package]
name = "quest-tui"
version = "0.1.0"
authors = ["frustak <soulburn007@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A crossplatform TUI todo list"
homepage = "https://github.com/frustak/Quest"
repository = "https://github.com/frustak/Quest"
readme = "README.md"
keywords = ["cli", "tui", "todo", "quest", "task"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"